--- a/src/style.css
+++ b/src/style.css
@@ -1,25 +1,184 @@
 body{
-    min-height: 100vh;
+    
+    background-color: lightgrey;
 }
 
+header{
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr,4fr,1fr;
+    grid-template-rows: 1fr;
+    contain: content;
+
+}
+
+.pageTitle{
+    grid-column: 1/2;
+    width: 100%
+}
+
+.logo {
+    grid-column: 2/3;
+    width: 100%
+}
+
+#mainTitle {
+    grid-column: 3/4;
+    width: 100%;
+    font-size: 100%;
+    
+}
+main{
+    height: 90vh;
+    width: 90vw;
+    margin: 0;
+    display:grid;
+    grid-template-columns: 1fr, 1fr, 1fr, 1fr;
+    grid-template-rows: 1fr,1fr, 1fr, 1fr, 1fr, 1fr;
+    
+}
+
+.searchBar{
+    grid-column:2/4;
+    grid-row:1/2
+}
+
+#movieSection{
+    height:100%;
+    width: 100%;
+    grid-column: 1/3;
+    grid-row: 2/8;
+    border-style: solid;
+    display: grid;
+    grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr;
+    grid-template-rows: 1fr,1fr, 1fr, 1fr, 1fr, 1fr;
+}
+
+.movieTitleBar{
+    grid-column: 1/4;
+    grid-row: 1/2;
+}
+
+.plotSummary{
+    grid-column: 1/4;
+    grid-row: 2/4;
+}
+
+.yourSlate{
+    grid-column: 1/6;
+    grid-row: 4/5;
+}
+
+.yourSubmission{
+    grid-column: 1/6;
+    grid-row: 5/7;
+}
+#moviePoster{
+    grid-column:4/6;
+    grid-row: 1/4;
+}
 .moviePoster {
-    width: 200px;
-    height: calc(200px * (16/9));
+    width: 150px;
+    height: calc(150px * (16/9));
     object-fit: contain;
 }
+#slatest{
+    grid-column: 3/5;
+    grid-row: 2/4;
+    border-style: solid;
+    display:grid;
+    grid-template-columns: 1fr, 1fr, 1fr;
+    grid-template-rows: 1fr,1fr, 1fr, 1fr;
+}
+#slatestTitle{
+    grid-column: 1/3;
+    grid-row: 1/2
+}
+#slatestTime{
+    grid-column: 1/3;
+    grid-row:2/3;
+}
+#profilePic{
+    grid-column:3/4;
+    grid-row:1/3
+}
+.profilePic{
+    width: 100px;
+    height: calc(100px * (16/9));
+    object-fit: contain;
+}
+#slatestPoster{
+    grid-column:1/2;
+    grid-row: 3/5;
+}
+.slatestPoster{
+    width: 100px;
+    height: calc(100px * (16/9));
+    object-fit: contain;
+}
+#slateText{
+    grid-column:2/4;
+    grid-row: 3/5
+}
+
+#existing{
+    grid-column: 4/5;
+    grid-row:4/5
+}
+
+#dNc{
+    grid-column: 3/5;
+    grid-row: 5/8;
+    border-style: solid;
+    display:grid;
+    grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr;
+    grid-template-rows: 1fr,1fr, 1fr;
+}
+
+#dBcTitle{
+    grid-column: 1/5;
+    grid-row: 1/2;
+}
+#seeMoreCast{
+    grid-column: 5/6;
+    grid-row: 1/2
+}
+
+#cast1{
+    grid-column:1/2;
+    grid-row:2/4;
+}
+#cast2{
+    grid-column:2/3;
+    grid-row:2/4;
+}
+#cast3{
+    grid-column:3/4;
+    grid-row:2/4;
+}
+#cast4{
+    grid-column:4/5;
+    grid-row:2/4;
+}#cast5{
+    grid-column:5/6;
+    grid-row:2/4;
+}
+
+
+footer{
+    position:absolute
+}
+
+
 
 #profilePic {
     width: 200px;
     height: calc(200px * (16/9));
     object-fit: contain;
 }
-#slatestPoster {
-    width: 200px;
-    height: calc(200px * (16/9));
-    object-fit: contain;
-}
 
 .cast{
+    margin: 0;
     width: 100px;
     height: calc(100px * (16/9));
     object-fit: contain;
