--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,13 @@
 body{
-    
+    height: 100%;
+    width:100%;
+    display:grid;
+    grid-template-rows: 5%,85%,5%;
     background-color: lightgrey;
 }
 
 header{
+    grid-row: 1/2 ;
     height: 100%;
     display: grid;
     grid-template-columns: 1fr,4fr,1fr;
@@ -17,9 +21,11 @@ header{
     width: 100%
 }
 
-.logo {
+#logo {
     grid-column: 2/3;
-    width: 100%
+    height: fit-content;
+    height: 80%;
+    width: 90%
 }
 
 #mainTitle {
@@ -29,16 +35,20 @@ header{
     
 }
 main{
-    height: 90vh;
-    width: 90vw;
-    margin: 0;
+    grid-row:2/3;
+    height: 80%;
+    width: 95%;
+    margin: auto;
+    margin-top: -8px;
+    gap: 20px;
     display:grid;
-    grid-template-columns: 1fr, 1fr, 1fr, 1fr;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
     grid-template-rows: 1fr,1fr, 1fr, 1fr, 1fr, 1fr;
     
 }
 
-.searchBar{
+#searchBar{
+    width:auto;
     grid-column:2/4;
     grid-row:1/2
 }
@@ -50,8 +60,8 @@ main{
     grid-row: 2/8;
     border-style: solid;
     display: grid;
-    grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr;
-    grid-template-rows: 1fr,1fr, 1fr, 1fr, 1fr, 1fr;
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+    grid-template-rows: repeat(6, minmax(0, 1fr));
 }
 
 .movieTitleBar{
@@ -60,6 +70,8 @@ main{
 }
 
 .plotSummary{
+    height: 100%;
+    width: 100%;
     grid-column: 1/4;
     grid-row: 2/4;
 }
@@ -78,16 +90,18 @@ main{
     grid-row: 1/4;
 }
 .moviePoster {
-    width: 150px;
-    height: calc(150px * (16/9));
+    width: 100%;
+    height: 100%;
     object-fit: contain;
 }
 #slatest{
+    height: 100%;
+    width: 100%;
     grid-column: 3/5;
     grid-row: 2/4;
     border-style: solid;
     display:grid;
-    grid-template-columns: 1fr, 1fr, 1fr;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-template-rows: 1fr,1fr, 1fr, 1fr;
 }
 #slatestTitle{
@@ -103,8 +117,8 @@ main{
     grid-row:1/3
 }
 .profilePic{
-    width: 100px;
-    height: calc(100px * (16/9));
+    height:100%;
+    width:100%;
     object-fit: contain;
 }
 #slatestPoster{
@@ -112,8 +126,8 @@ main{
     grid-row: 3/5;
 }
 .slatestPoster{
-    width: 100px;
-    height: calc(100px * (16/9));
+    height:100%;
+    width:100%;
     object-fit: contain;
 }
 #slateText{
@@ -127,15 +141,19 @@ main{
 }
 
 #dNc{
+    height:100%;
+    width:100%;
     grid-column: 3/5;
     grid-row: 5/8;
     border-style: solid;
     display:grid;
-    grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr;
-    grid-template-rows: 1fr,1fr, 1fr;
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+    grid-template-rows: (3, minmax(0, 1fr));
 }
 
 #dBcTitle{
+    height:100%;
+    width:100%;
     grid-column: 1/5;
     grid-row: 1/2;
 }
@@ -145,42 +163,57 @@ main{
 }
 
 #cast1{
+    height:100%;
+    width:100%;
     grid-column:1/2;
     grid-row:2/4;
+    object-fit: contain;
+    display:block
 }
 #cast2{
+    height:100%;
+    width:100%;
     grid-column:2/3;
     grid-row:2/4;
+    object-fit: contain;
+    display:block
 }
 #cast3{
+    height:100%;
+    width:100%;
     grid-column:3/4;
     grid-row:2/4;
+    object-fit: contain;
+    display:block
 }
 #cast4{
+    height:100%;
+    width:100%;
     grid-column:4/5;
     grid-row:2/4;
+    object-fit: contain;
+    display:block
 }#cast5{
+    height:100%;
+    width:100%;
     grid-column:5/6;
     grid-row:2/4;
+    object-fit: contain;
+    display:block
 }
 
 
 footer{
-    position:absolute
+    grid-row:3/4;
 }
 
 
 
-#profilePic {
-    width: 200px;
-    height: calc(200px * (16/9));
-    object-fit: contain;
-}
 
 .cast{
-    margin: 0;
-    width: 100px;
-    height: calc(100px * (16/9));
+    width: 80%;
+    height: 80%;
     object-fit: contain;
+    display: block;
 }
 
